--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,3 +6,28 @@
   --button-hov: #007700;
   --center-els: 0 auto; 
 }
+/* Google font */
+/* dancing-script-regular - latin */
+@font-face {
+  font-family: 'Dancing Script';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/dancing-script-v9-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Dancing Script Regular'), local('DancingScript-Regular'),
+       url('../fonts/dancing-script-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/dancing-script-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/dancing-script-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/dancing-script-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/dancing-script-v9-latin-regular.svg#DancingScript') format('svg'); /* Legacy iOS */
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background-color: var(--main-bg);
+}
+h1 {
+  font-family: 'Dancing Script';
+}
