--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,6 +20,19 @@
        url('../fonts/dancing-script-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/dancing-script-v9-latin-regular.svg#DancingScript') format('svg'); /* Legacy iOS */
 }
+/* comfortaa-regular - latin */
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/comfortaa-v12-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Comfortaa Regular'), local('Comfortaa-Regular'),
+       url('../fonts/comfortaa-v12-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/comfortaa-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/comfortaa-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/comfortaa-v12-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/comfortaa-v12-latin-regular.svg#Comfortaa') format('svg'); /* Legacy iOS */
+}
 * {
   margin: 0;
   padding: 0;
@@ -111,19 +124,39 @@ section, article {
 .button-container {
   text-align: center;
 }
-.jumbotron-button {
+.jumbotron-button, .article-button {
   margin-bottom: 15px;
   background-color: var(--button);
   font-size: 1.5rem;
   padding: 10px;
   color: var(--sect-bg);
 }
-.jumbotron-button:hover {
+.jumbotron-button:hover, .article-button:hover {
   background-color: var(--sect-bg);
   color: var(--button-hov);
   border: 2px solid var(--button-hov);
 }
 .further-articles {
   width: 85%;
-  margin: var(--center-els);
+  margin: 0 auto 20px auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+.further {
+  flex: 0 1 45%;
+  border: 2px solid var(--button);
+  border-radius: 10px;
+  margin: 2.5%;
+}
+.further section {
+  margin-top: 10px;
+}
+.further h2 {
+  text-align: center;
+  font-family: 'Comfortaa';
+}
+.further p {
+  width: 90%;
+  text-align: justify;
+  margin: 0 auto 30px auto;
 }
