included background imager

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,10 +150,17 @@ section, article {
 }
 .further section {
   margin-top: 10px;
+  background-image: url(../images/niilo-isotalo-379496-unsplash.jpg);
+  height: 150px;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .further h2 {
   text-align: center;
   font-family: 'Comfortaa';
+  color: white;
 }
 .further p {
   width: 90%;
