--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,11 +42,6 @@ body {
   background-color: var(--main-bg);
   font-family: sans-serif;
 }
-nav {
-  background-color: black;
-  text-align: right;
-  padding-right: 10px;
-}
 .mainnav > ul > li {
   display: inline-block;
 }
@@ -95,7 +90,7 @@ header {
 h1 {
   font-family: 'Dancing Script';
   font-size: 3.5rem;
-  flex: 0 0 6rem;
+  flex: 0 1 6rem;
 }
 .subtitle {
   text-transform: uppercase;
@@ -105,7 +100,7 @@ section, article {
   margin-bottom: 20px;
 }
 .jumbotron, .main-content, .last, .further-articles {
-  width: 85%;
+  width: 720px;
   margin: 0 auto 20px auto;
   border-radius: 20px;
 }
@@ -131,17 +126,8 @@ section, article {
   padding: 10px;
   color: var(--sect-bg);
 }
-.jumbotron-button:hover, .article-button:hover, .last-button:hover {
-  background-color: var(--sect-bg);
-  color: var(--button-hov);
-  border: 2px solid var(--button-hov);
-}
-.further-articles {
-  display: flex;
-  flex-wrap: wrap;
-}
 .further {
-  flex: 0 1 45%;
+  flex: 0 0 320px;
   border: 2px solid var(--button);
   border-radius: 10px;
   margin: 2.5%;
@@ -151,9 +137,15 @@ section, article {
   background-image: url(../images/niilo-isotalo-379496-unsplash.jpg);
   height: 150px;
   background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.further section:hover {
+  transform: scale(1.01);
+  height: 150px;
+  width: 320px;
 }
 .further h2 {
   text-align: center;
@@ -170,4 +162,66 @@ section, article {
 }
 span.fab, span.fas {
   font-size: 2em;
+}
+@media screen and (min-width: 769px) {
+  .mainnav {
+    background-color: black;
+    text-align: right;
+    padding-right: 10px;
+  }
+  .further-articles {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .jumbotron-button:hover, .article-button:hover, .last-button:hover {
+    background-color: var(--sect-bg);
+    color: var(--button-hov);
+    border: 2px solid var(--button-hov);
+  }
+  [class*="facebook"]:hover, [class*="twitter"]:hover, [class*="linkedin"]:hover {
+    color: blue;
+  }
+  [class*="google"]:hover {
+    color: red;
+  }
+  [class*="envelope"]:hover {
+    color: orange;
+  }
+  [class*="instagram"]:hover {
+    color: green;
+  }
+}
+@media screen and (min-width: 568px) and (max-width: 768px){
+  .mainnav {
+    background-color: black;
+    text-align: right;
+  }
+  h1 {
+    flex: 0 0 12rem;
+  }
+  .subtitle {
+    color: var(--sect-bg);
+  }
+  .further-articles {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 567px) {
+  .mainnav {
+    background-color: black;
+    text-align: right;
+  }
+  .mainnav > ul > li:last-child a {
+    padding-right: 0;
+  }
+  .subtitle {
+    text-transform: uppercase;
+    color: var(--sect-bg);
+  }
+  .further {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
 }
