--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,11 +93,13 @@ header {
 }
 h1 {
   font-family: 'Dancing Script';
-  font-size: 3.5rem;
-  flex: 0 1 6rem;
+  font-size: 3rem;
+  flex: 0 1 3.2rem;
 }
 .subtitle {
   text-transform: uppercase;
+  text-align: center;
+  font-weight: bold;
 }
 /* Main part */
 section, article {
@@ -105,7 +107,6 @@ section, article {
   margin-bottom: 20px;
 }
 .jumbotron, .main-content, .last, .further-articles {
-  width: 720px;
   margin: 0 auto 20px auto;
   border-radius: 20px;
 }
@@ -133,7 +134,7 @@ section, article {
 }
 /* Articles and images */
 .further {
-  flex: 0 0 320px;
+  flex: 0 0 45%;
   border: 2px solid var(--button);
   border-radius: 10px;
   margin: 2.5%;
@@ -147,11 +148,6 @@ section, article {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.further section:hover {
-  transform: scale(1.01);
-  height: 150px;
-  width: 320px;
 }
 .further h2 {
   text-align: center;
@@ -178,6 +174,9 @@ span.fab, span.fas {
     background-color: black;
     text-align: right;
     padding-right: 10px;
+  }
+  .jumbotron, .main-content, .last, .further-articles {
+    width: 720px;
   }
   /* Article section */
   .further-articles {
@@ -218,6 +217,9 @@ span.fab, span.fas {
   .subtitle {
     color: var(--sect-bg);
   }
+  .jumbotron, .main-content, .last, .further-articles {
+    width: 500px;
+  }
   /* Article section */
   .further-articles {
     display: flex;
@@ -238,6 +240,9 @@ span.fab, span.fas {
   .subtitle {
     text-transform: uppercase;
     color: var(--sect-bg);
+  }
+  .jumbotron, .main-content, .last, .further-articles {
+    width: 320px;
   }
   /* Article section */
   .further {
