--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,7 +84,7 @@ header {
   height: 50vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
   background-image: url(../images/sergei-akulich-457851-unsplash.jpg);
@@ -95,11 +95,18 @@ h1 {
   font-family: 'Dancing Script';
   font-size: 3rem;
   flex: 0 1 3.2rem;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .subtitle {
   text-transform: uppercase;
   text-align: center;
   font-weight: bold;
+  color: var(--sect-bg);
+}
+.fbw12 {
+  color: var(--sect-bg);
+  text-decoration: underline dotted;
 }
 /* Main part */
 section, article {
@@ -210,13 +217,7 @@ span.fab, span.fas {
     background-color: black;
     text-align: right;
   }
-  /* Header */
-  h1 {
-    flex: 0 0 12rem;
-  }
-  .subtitle {
-    color: var(--sect-bg);
-  }
+  /* Contents in the main section */
   .jumbotron, .main-content, .last, .further-articles {
     width: 500px;
   }
@@ -236,11 +237,7 @@ span.fab, span.fas {
   .mainnav > ul > li:last-child a {
     padding-right: 0;
   }
-  /* Header */
-  .subtitle {
-    text-transform: uppercase;
-    color: var(--sect-bg);
-  }
+  /* Contents in the main section */
   .jumbotron, .main-content, .last, .further-articles {
     width: 320px;
   }
