--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,6 +91,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  background-position: center center;
 }
 h1 {
   font-family: 'Dancing Script';
